# DevopsLab

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  ansible.cfg  pyproject.toml  requirements-dev.txt  requirements.txt  settings.gradle  workspace.code-workspace
.github/workflows/: ansible.yaml  terraform.yml
ansible/: Command_reference.txt  ansible.cfg.example  requirements.yaml
ansible/environments/: 01-homelab.yaml  01-lab.yaml  02-main-docker.yaml  03-lxd.yaml  lxdjoj.py  main-docker.yaml
ansible/environments/group_vars/: INTERNAL.yaml  all.yaml  jdevlab  test.yaml  ubuntu18_04.yaml
ansible/files/: lxdinit.j2
ansible/playbooks/: ansible-lab.yaml  homelab.yaml  lab.yaml  setup.yaml  test.yaml
ansible/plugins/filter/: penvironment_placement.py  pplatform_family.py
ansible/roles/application_defaults/tasks/: authbind.yaml
ansible/roles/baseline_configuration/tasks/: dns-client.yaml  main.yaml
ansible/roles/baseline_configuration/templates/: resolved.conf.j2
ansible/roles/baseline_configuration/vars/: main.yaml
ansible/roles/bind9/handlers/: main.yaml
ansible/roles/bind9/tasks/: main.yaml
ansible/roles/bind9/templates/: db.192.168.1.j2  db.jdevlab.local.j2  named.conf.local.j2
ansible/roles/bind9/vars/: main.yaml
ansible/roles/glusterfs_server/handlers/: main.yaml
ansible/roles/glusterfs_server/tasks/: main.yaml  partition.yaml
ansible/roles/glusterfs_server/vars/: main.yaml
ansible/roles/sendmail/defaults/: main.yaml
ansible/vars/: lab_servers.yaml.sample
containers/: Dockerfile-ubuntu18  Dockerfile-ubuntu20  Dockerfile-ubuntu22  Dockerfile-ubuntu23.04  Dockerfile-ubuntu24.04  compose-environment-dev.yaml  compose-environment-preprod.yaml  compose-environment-prod.yaml  compose-environment-staging.yaml  compose-environment-test.yaml  compose-environment-uat.yaml  linux.yaml  loki-config.yaml  operations.yaml  promtail-local-config.yaml  ubuntu.yaml
scripts/: elasticache_status.py  ftp_download.py  slugify_title.py
terraform/: main.tf
vagrant/: Vagrantfile  tt.jsonn  vagrant_patch
(+19 files in other folders)
