[tool.poetry]
name = "devopslab"
version = "0.1.0"
description = "DevOps Lab on homelab server01"
authors = ["Jojees <joji@jojees.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^8.4.0"
ansible-lint = { version = "^6.20.0", markers = "platform_system != 'Windows'" }


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
tox = "^4.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
